--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -36,10 +36,7 @@
 .tri-column {
     .span(4);
 }
-.label-column {
-    .span(0);
-    background-color: white;
-}
+
 .notes-column {
     width: 100%;
     text-align: left;
@@ -69,9 +66,9 @@
     width: 30%;
     height: 100%;
     float: left;
-    text-align: left;
-    padding-left:80px;
-    padding-right: 0px;
+    text-align: center;
+    padding-left:0px;
+    padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 20px;
     position: relative;
@@ -80,13 +77,14 @@
     width: 100%;
     height: 100%;
     float: left;
-    text-align: left;
+    text-align: center;
     position: relative;
     padding-top: 10px;
 }
 .details_wrapper {
     position: relative;
     float:left;
+    text-align:center;
     width: 100%;
     height: 100%;
 }
@@ -165,7 +163,7 @@
     margin-bottom: @baseLine * 2;
     background-color: #F0F0F0;
     text-align: center;
-    h2, p {
+    p {
         .span(12);
     }
     h1 {
@@ -173,6 +171,7 @@
         font-weight: 400;
         font-size: 250%;
         padding-bottom: 15px;
+        text-align:center;
     }
     h3 {
         font-weight: 900;
@@ -185,8 +184,6 @@
         .font-size(1.428em);
         letter-spacing: normal;
         margin-bottom: .75em;
-        float: left;
-        .span(3);
     }
     p {
         margin-bottom: 1em;
@@ -561,6 +558,7 @@ article {
         height: 100%;
         float: left;
         padding-left: 80px;
+        text-align:left;
         position: relative;
         padding-top: 10px;
     }
