--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -54,6 +54,8 @@
         </ul>
       </aside>
       {% endif %}
+
+      {% if release.text %}
       <div class="title_text_wrapper" >
         <span class="release_details">
           <span class="version_wrapper">
@@ -64,10 +66,23 @@
             <h2>{{ _('{date}')|f(date=release.release_date|l10n_format_date, version=release.version) }} {{ _('{channel}')|f(channel=release.channel) }} Channel</h2>
           </span>
         </span>
-        {% if release.text %}
         <span class="thank_wrapper">
-        {{ release.text|markdown|safe }} </span> {% endif %}
-      </div>
+        {{ release.text|markdown|safe }} </span> 
+      </div> {% endif %}
+
+      {% if not release.text %}
+            <div class="title_text_wrapper_alt" >
+        <span class="release_details_alt">
+          <span class="version_wrapper_alt">
+            <h3>{{ version }}</h3>
+          </span>
+          <span class ="details_wrapper">
+            <h2>{{ _('{date}')|f(date=release.release_date|l10n_format_date, version=release.version) }} {{ _('{channel}')|f(channel=release.channel) }} Channel</h2>
+          </span>
+        </span>
+      </div> 
+
+      {% endif %}
       {% endblock %}
       {% block platform_switch %}
       {% endblock %}
