--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -89,17 +89,52 @@
     height: 100%;
 }
 .thank_wrapper {
-    width: 60%;
+    width: 65%;
     position:relative;
     word-wrap:break-word;
-    float:left;
+    float:right;
     text-align:left;
     padding-top:40px;
     padding-bottom:20px;
-    padding-left: 10px;
+    padding-left: 0px;
+    margin-right: 10px;
 }
 .title_text_wrap {
     width: 40%;
+    position: relative;
+}
+
+.release_details_alt {
+    width: 100%;
+    height: 100%;
+    float: left;
+    text-align: center;
+    padding-left:0px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    position: relative;
+}
+.version_wrapper_alt {
+    width: 30%;
+    height: 100%;
+    float: left;
+    text-align: center;
+    position: relative;
+    padding-top: 10px;
+    display: inline-block;
+}
+.details_wrapper_alt {
+    position: relative;
+    float:left;
+    text-align:center;
+    width: 70%;
+    height: 100%;
+    display: inline-block;
+}
+
+.title_text_wrap_alt {
+    width: 100%;
     position: relative;
 }
 #new-wrapper {
@@ -205,7 +240,7 @@
         padding-top: 20px;
     }
     h2 {
-        margin-bottom: .75em;
+        margin-bottom: 0em;
     }
 }
 .note_label {
@@ -478,6 +513,17 @@ article {
     .firstPlatform {
         padding-left: 40%;
     }
+    .thank_wrapper {
+    width: 100%;
+    position:relative;
+    word-wrap:break-word;
+    float:right;
+    text-align:left;
+    padding-top:40px;
+    padding-bottom:20px;
+    padding-left: 0px;
+    margin-right: 10px;
+}
     .notes-head {
         h1, h2, p {
             .span_narrow(7);
@@ -569,6 +615,22 @@ article {
         float:left;
         position: relative;
     }
+
+    .version_wrapper_alt {
+    width: 100%;
+    height: 100%;
+    float: left;
+    text-align: center;
+    position: relative;
+    padding-top: 10px;
+}
+.details_wrapper_alt {
+    position: relative;
+    float:left;
+    text-align:center;
+    width: 100%;
+    height: 100%;
+}
     .notes-head,
     .blueprint .notes-head {
         h1, h2, p {
