--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -37,6 +37,8 @@
 .release-notes {
     background-color: white;
     width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 .tri-column {
     .span(4);
