--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -767,7 +767,7 @@ html[lang^='en'] {
 .download-button .download-other.os_android .api-11,
 .android.gingerbread .download-button .download-list .os_android.api-11,
 .android.gingerbread .download-button .download-other.os_android .api-9,
-.android.x86 .download-button .download-list .os_android.armv7,
+.android.x86 .download-button .download-list .os_android.armv7up,
 .android.x86 .download-button .download-other.os_android .x86 {
     display: none !important;
 }
@@ -778,7 +778,7 @@ html[lang^='en'] {
 }
 
 .android.gingerbread .download-button .download-other.os_android .api-11,
-.android.x86 .download-button .download-other.os_android .armv7 {
+.android.x86 .download-button .download-other.os_android .armv7up {
     display: inline !important;
 }
 
