[bug 1171928] Fix static tabzilla on Firefox 36 tour pages

--- a/bedrock/firefox/templates/firefox/australis/fx36/firstrun-tour.html
+++ b/bedrock/firefox/templates/firefox/australis/fx36/firstrun-tour.html
@@ -8,7 +8,7 @@
 
 {% block telemetry_id %}firstrun-tour-36-release{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_fx36_firstrun' %}
 {% endblock %}
 
