--- a/bedrock/firefox/templates/firefox/australis/fx36/whatsnew-no-tour.html
+++ b/bedrock/firefox/templates/firefox/australis/fx36/whatsnew-no-tour.html
@@ -8,7 +8,7 @@
 
 {% block telemetry_id %}whatsnew-no-tour-36-release{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_fx36_whatsnew_no_tour' %}
 {% endblock %}
 
