--- a/bedrock/thunderbird/templates/thunderbird/releases/index.html
+++ b/bedrock/thunderbird/templates/thunderbird/releases/index.html
@@ -8,7 +8,7 @@
 {% block page_desc %}{{ _('Release notes for each version of Thunderbird.') }}{% endblock %}
 {% block body_id %}thunderbird-releases-index{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_releases_index' %}
 {% endblock %}
 
