--- a/bedrock/thunderbird/templates/thunderbird/releases/release-notes.html
+++ b/bedrock/thunderbird/templates/thunderbird/releases/release-notes.html
@@ -10,7 +10,7 @@
 {% block body_id %}notes{% endblock %}
 {% block body_class %}thunderbird-notes sky{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_releasenotes' %}
 {% endblock %}
 
