--- a/bedrock/thunderbird/templates/thunderbird/releases/system_requirements.html
+++ b/bedrock/thunderbird/templates/thunderbird/releases/system_requirements.html
@@ -11,7 +11,7 @@
 {% block body_class %}thunderbird-notes sky{% endblock %}
 
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_releasenotes' %}
 {% endblock %}
 
